force-app/main/default/objects/CAU_Email_Subscription__c/CAU_Email_Subscription__c.object-meta.xml
<CustomObject>
    <description>This object is specifically created to handle the email subscription of the Community Unregistered Users.
It will keep only the following fields and it may subject to change if we update the subscription options in its parent(Contact) object.

On update there is a trigger that update subscription options in Contact object: 

HasOptedOutOfEmail,
PCN_Modules_Services__c,
Service_Item_3__c,
Event_email__c,
Webinar_email__c,
Press_Releases__c,
Email_uCenter__c,
Email_Blog__c,
Email_Event_Attendance__c,
Email_Magazine__c,</description>
    <label>CAU Email Subscription</label>
    <nameField>
        <label>CAU Email Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CAU Email Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>