force-app/main/default/objects/CAU_Email_Subscription__c/fields/Customer_email__c.field-meta.xml
<CustomField>
    <fullName>Customer_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer email</label>
    <type>Checkbox</type>
</CustomField>