force-app/main/default/objects/CAU_Email_Subscription__c/fields/Email_Blog__c.field-meta.xml
<CustomField>
    <fullName>Email_Blog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blog</label>
    <type>Checkbox</type>
</CustomField>