force-app/main/default/objects/CAU_Email_Subscription__c/fields/Email_Event_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Email_Event_Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Attendance</label>
    <type>Checkbox</type>
</CustomField>