force-app/main/default/objects/CAU_Email_Subscription__c/fields/Email_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Email_Magazine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magazine</label>
    <type>Checkbox</type>
</CustomField>