force-app/main/default/objects/CAU_Email_Subscription__c/fields/Email_uCenter__c.field-meta.xml
<CustomField>
    <fullName>Email_uCenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>uCenter</label>
    <type>Checkbox</type>
</CustomField>