force-app/main/default/objects/CAU_Email_Subscription__c/fields/Event_email__c.field-meta.xml
<CustomField>
    <fullName>Event_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event email</label>
    <type>Checkbox</type>
</CustomField>