force-app/main/default/objects/CAU_Email_Subscription__c/fields/Webinar_email__c.field-meta.xml
<CustomField>
    <fullName>Webinar_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Webinar email</label>
    <type>Checkbox</type>
</CustomField>