force-app/main/default/objects/CAU_Email_Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Email__c</columns>
    <columns>Customer_email__c</columns>
    <columns>Event_email__c</columns>
    <columns>Webinar_email__c</columns>
    <columns>Email_Blog__c</columns>
    <columns>Email_Event_Attendance__c</columns>
    <columns>Email_uCenter__c</columns>
    <columns>Email_Magazine__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>